@@ -1,5 +1,10 @@
 2001-07-30  Jody Goldberg <jgoldberg@home.com>
 
+	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use the properly
+	  localized formats.
+
+2001-07-30  Jody Goldberg <jgoldberg@home.com>
+
 	* src/gnumeric-canvas.c (gnm_canvas_key_mode_sheet) : Use
 	  workbook_cmd_mutate_borders.
 	* src/workbook-cmd-format.c (workbook_cmd_mutate_borders) : moved
